# Nekton

./: README.md
control_bringup/: CMakeLists.txt  package.xml
control_bringup/launch/: control.launch
nekton_bringup/: CMakeLists.txt  package.xml
nekton_bringup/launch/: odom_simulation.py  simulation.py  test.launch
nekton_description/: CMakeLists.txt  package.xml
nekton_description/config/: TAM.yaml  inertial.yaml  thruster_manager.yaml
nekton_description/launch/: spawn.py
nekton_description/models/nekton/: nekton.xacro
nekton_description/models/nekton/components/: sensors.xacro  thrusters.xacro
nekton_description/models/nekton/meshes/: Nekton_body_mesh.STL  T500_body.STL  T500_prop.STL
nekton_msgs/: CMakeLists.txt  package.xml
nekton_onboard/control_bringup/launch/: hold.launch  vel.launch
nekton_onboard/onboard_bringup/: CMakeLists.txt
nekton_onboard/onboard_bringup/launch/: onboard.launch
nekton_onboard/onboard_controller/onboard_controller/: thruster_controller.py
nekton_sim/: README.md
nekton_sim/sim_bringup/: CMakeLists.txt  package.xml
nekton_sim/sim_bringup/config/: bridge.yml  odom_bridge.yml
nekton_sim/sim_bringup/launch/: odom_bridge.py  sim.py
nekton_sim/sim_worlds/: CMakeLists.txt  package.xml
nekton_topside/: README.md
nekton_topside/topside_bringup/: CMakeLists.txt  package.xml
nekton_topside/topside_bringup/launch/: topside.launch
nekton_topside/topside_react_ui/: index.html  package-lock.json  package.json  vite.config.js
nekton_topside/topside_react_ui/src/: App.jsx  index.css
nekton_topside/topside_react_ui/src/components/: Alerts.jsx  ArtificialHorizonCanvas.jsx  CameraFeed.jsx  DepthAltimeter.jsx  Grid.css  Grid.jsx  GridContainer.jsx  LaserScanFan.jsx  LaserScanPlot.jsx  SimControls.jsx
nekton_topside/topside_react_ui/src/context/: RosProvider.jsx
nekton_topside/topside_ui/: CMakeLists.txt  Readme.md  package.xml
nekton_topside/topside_ui/launch/: ui.launch
nekton_topside/topside_ui/src/: index.html  index.js  styles.css
nekton_topside/topside_ui/src/components/: Alerts.js  SimControls.js  TestComponent.js  nekton-components.js
onboard_bringup/: package.xml
onboard_controller/: package.xml  setup.cfg  setup.py
onboard_controller/launch/: vel_control.py
onboard_controller/onboard_controller/: velocity_controller.py
onboard_controller/test/: up.py
onboard_forward_cam/: package.xml  setup.cfg  setup.py
onboard_forward_cam/onboard_forward_cam/: onboard_forward_cam.py
onboard_forward_sonar/: package.xml  setup.cfg  setup.py
onboard_forward_sonar/onboard_forward_sonar/: onboard_forward_sonar.py  onboard_sonar_image.py
onboard_localization/: CMakeLists.txt  package.xml
onboard_localization/config/: ekf.yaml
onboard_localization/launch/: localization.py
onboard_pressure_conversion/: package.xml  setup.cfg  setup.py
onboard_pressure_conversion/onboard_pressure_conversion/: onboard_pressure_conversion.py
sonar/: metadata.yaml
