<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onboard_controller</name>
  <version>0.0.0</version>
  <description>Controller on AUV</description>
  <maintainer email="mwoodward@gatech.edu">Matthew Woodward</maintainer>
  <license>TODO: License declaration</license>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
