<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_worlds</name>
  <version>0.0.0</version>
  <description>TODO: World files used for gazebo simulation</description>
  <maintainer email="mwoodward@gatech.edu">Matthew Woodward</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!--    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" /> -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
