<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>topside_ui</name>
  <version>0.0.0</version>
  <description>The nekton UI that will be displayed on the topside computer</description>
  <maintainer email="mwoodward@gatech.edu">Matthew Woodward</maintainer>
  <license>TODO: License declaration</license>


  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rosbridge_server</depend>
  <depend>nekton_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
